--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ baseurl:          ''
 
 author:
   name:           'Andrew Fong'
-  url:            https://twitter.com/fongandrewc
+  url:            
 
 paginate:         5
 # paginate_path:    '/page:num'
