--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ baseurl:          ''
                   # sidebar_blog_link below.
 
 author:
-  name:           'Andrew Fong'
+  name:           'LEBINHAN'
   url:            
 
 paginate:         5
